--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -12,6 +12,7 @@
 
     <properties>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+        <junit-platform.version>1.3.2</junit-platform.version>
     </properties>
 
     <dependencies>
@@ -53,6 +54,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>2.22.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
